src/main/java/com/example/demo/errors/ErrorRespone.java
package com.example.demo.errors;

@Data
public class ErrorRespone {
}
